# xprop

./: .cvsignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  COPYING  Makefile.am  clientwin.c  configure.ac  dsimple.c  dsimple.h  meson.build  xprop.c  xprop.man
man/: meson.build  xprop.man
